# MapAddress

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_dmg_enhanced.sh
.github/workflows/: build-appimage.yml  build-installers.yml
include/: address.h  addressdialog.h  geocodingservice.h  logger.h  mapprovider.h
installer/android/: AndroidManifest.xml  QUICKSTART.md  README.md
installer/android/res/values/: strings.xml
installer/windows/: QUICKSTART.md  README.md  deploy.bat  installer.nsi
resources/: resources.qrc
src/: address.cpp  addressdialog.cpp  addressdialog.h  addressdialog.ui  addresslist.cpp  addresslist.h  database.cpp  database.h  geocodingservice.cpp  geocodingservice.h  googlemapsprovider.cpp  googlemapsprovider.h  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h  openstreetmapprovider.cpp  openstreetmapprovider.h  routingservice.cpp  routingservice.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
tests/: CMakeLists.txt  test_address.cpp  test_addresslist.cpp  test_database.cpp
ui/: addressdialog.ui
